# hippie

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindAssimp.cmake  FindCUDADriverAPI.cmake  FindDevIL.cmake  FindGLEW.cmake  FindHIPDriverAPI.cmake
lib/assimp_64bit/: version.txt
lib/devil_64bit/include/IL/: ilut_config.h
license/: LICENSE-simd.txt
src/: CMakeLists.txt
src/hippie/: CMakeLists.txt  Globals.cpp  Globals.h  main.cpp
src/hippie/benchmark/: Benchmark.cpp  Benchmark.h
src/hippie/environment/: AppEnvironment.cpp  AppEnvironment.h  Environment.cpp  Environment.h
src/hippie/gpu/: Buffer.cpp  Buffer.h  HipCompiler.cpp  HipCompiler.h  HipKernel.cpp  HipKernel.h  HipModule.cpp  HipModule.h  Texture.cpp  Texture.h
src/hippie/gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  LightWindow.cpp  LightWindow.h  LightWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenSceneDialog.cpp  OpenSceneDialog.h  OpenSceneDialog.ui  RenderParamsWindow.cpp  RenderParamsWindow.h  RenderParamsWindow.ui  RenderWidget.cpp  RenderWidget.h
src/hippie/radix_sort/: RadixSort.cpp  RadixSort.h  RadixSortKernels.cu  RadixSortKernels.h  RadixSortPolicy.h  RadixSortUtil.h  Reduce.h  Scan.h
src/hippie/rt/: HipUtil.h  TaskQueue.h
src/hippie/rt/bvh/: ATRBuilder.cpp  ATRBuilder.h  ATRBuilderKernels.cu  ATRBuilderKernels.h  BVH.h  BVHBuilder.h  BVHCollapser.cpp  BVHCollapser.h  BVHCollapserKernels.cu  BVHCollapserKernels.h  BVHConverter.cpp  BVHConverter.h  BVHExporter.h  BVHImporter.h  HLBVHBin.h  HLBVHBuilder.cpp  HLBVHBuilder.h  HLBVHBuilderKernels.cu  HLBVHBuilderKernels.h  HipBVH.cpp  HipBVH.h  HipBVHKernels.cu  HipBVHKernels.h  HipBVHNode.h  HipBVHUtil.h  InsertionBuilder.cpp  InsertionBuilder.h  InsertionBuilderKernels.cu  InsertionBuilderKernels.h  LBVHBuilder.cpp  LBVHBuilder.h  LBVHBuilderKernels.cu  LBVHBuilderKernels.h  PLOCBuilder.cpp  PLOCBuilder.h  PLOCBuilderKernels.cu  PLOCBuilderKernels.h  Presplitter.cpp  Presplitter.h  PresplitterKernels.cu  (+8 more)
src/hippie/rt/ray/: PixelTable.cpp  PixelTable.h  Ray.h  RayBuffer.cpp  RayBuffer.h  RayBufferKernels.cu  RayBufferKernels.h  RayGen.cpp  RayGen.h  RayGenKernels.cu  RayGenKernels.h
src/hippie/rt/renderer/: Renderer.cpp  Renderer.h  RendererKernels.cu  RendererKernels.h
src/hippie/rt/scene/: Camera.cpp  Camera.h  CameraLoader.cpp  CameraLoader.h  DynamicScene.cpp  DynamicScene.h  EnvironmentMap.cpp  EnvironmentMap.h  Interpolator.cpp  Interpolator.h  InterpolatorKernels.cu  InterpolatorKernels.h  Material.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  TextureAtlas.cpp  TextureAtlas.h
src/hippie/rt/tracer/: HipTracer.cpp  HipTracer.h  HipTracerBinKernels.cu  HipTracerKernels.h  HipTracerOctKernels.cu  HipTracerQuadKernels.cu
src/hippie/shader/: fragment.fs  vertex.vs
src/hippie/util/: AABB.h  AssimpImporter.cpp  AssimpImporter.h  BinExporter.cpp  BinExporter.h  BinImporter.cpp  BinImporter.h  Hash.cpp  Hash.h  ImageExporter.cpp  ImageExporter.h  ImageImporter.cpp  ImageImporter.h  Logger.cpp  Logger.h  Math.cpp  Math.h  Random.h  SceneExporter.h  SceneImporter.h
test/Comparison/: all.sh  env.py  plot-correlation.py  plot-tradeoff.py  table-build.py  table-constants.py  table-csv.py  table-overview.py  table-perf-avg.py  table-ratio-avg.py  table-times-avg.py  test-anova.py
test/InsertBvh/: all.sh  bar.py  env.py  plot.py  table.py
test/RaySorting/: all.sh  bar.py  bits.py  code.py  dynamic_fetch.py  env.py  length.py  method.py  mycorr.py  ref.py  stats.py  table.py
